Fix Header Container Cotent Spillage

--- a/style.css
+++ b/style.css
@@ -3,28 +3,54 @@ body {
     font-family: Roboto, sans-serif;
     margin: 0;
     padding: 0 120px;
+    background-color: black;
+}
+
+.header-container {
+color: white;
+background-color: #1F2937;
+padding: 16px;
+margin: 0;
+min-width: max-content;
 }
 
 .header-links{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     gap: 16px;
-    padding-bottom: 100px;;
+    padding-bottom: 100px;
+    list-style: none;
+    text-decoration: none;
+    font-size: 18px;
+    font-color: #E5E7EB;
 }
 
-.main-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
+.flex-link1 {
+    margin-right: auto;
+    font-size: 24px;
+    font-weight: bold;
+    color: #F9FAF8;
 }
+
 
 .small-container {
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .title-section {
     max-width: 400px;
 }
 
+.title {
+    font-size: 48px;
+    font-weight: extra bold;
+}
 
+
+.button {
+    color: #3882F6;
+}
